section club-cards
Add half section club-cards

--- a/src/index.html
+++ b/src/index.html
@@ -365,6 +365,63 @@
       <!-- /.container -->
     </section>
     <!-- /.gallery -->
+    <section class="club-cards">
+      <div class="container">
+        <h2 class="header-text club-cards__header">Клубные карты</h2>
+        <!-- /.header-text club-cards__header -->
+        <div class="club-cards__wrapper">
+          <div class="club-card club-cards__card">
+            <img src="img/club-cards/background-card-1.jpg" alt="image: club-card" class="club-card__background-img-first">
+            <img src="img/club-cards/main-card.jpg" alt="image: club-card" class="club-card__main-img">
+            <img src="img/club-cards/background-card-2.jpg" alt="image: club-card" class="club-card__background-img-second">
+          </div>
+          <!-- /.club-card club-cards__card -->
+          <form action="" class="form club-cards__form">
+            <div class="club-cards__form-wrapper">
+              <div class="club-cards__months-wrapper">
+                <div class="input-group__months">
+                  <input type="radio" name="months" value="1 month" id="1 month" class="club-cards__input-months">
+                  <label for="1 month" class="club-cards__label-months club-cards__label-months-first">1 Месяц</label>
+                </div>
+                <!-- /.input-group__months -->
+                <div class="input-group__months">
+                  <input type="radio" name="months" value="6 month" id="6 month" class="club-cards__input-months">
+                  <label for="6 month" class="club-cards__label-months">6 Месяцев</label>
+                </div>
+                <!-- /.input-group__months -->
+                <div class="input-group__months">
+                  <input type="radio" name="months" value="9 month" id="9 month" class="club-cards__input-months">
+                  <label for="9 month" class="club-cards__label-months">9 Месяцев</label>
+                </div>
+                <!-- /.input-group__months -->
+                <div class="input-group__months">
+                  <input type="radio" name="months" value="12 month" id="12 month" class="club-cards__input-months">
+                  <label for="12 month" class="club-cards__label-months
+                  club-cards__label-months-fourth">12 Месяцев</label>
+                </div>
+                <!-- /.input-group__months -->
+              </div>
+              <!-- /.club-cards__months-wrapper -->
+              <div class="club-crads__adress-wrapper">
+                <div class="input-group__adress">
+                  <input type="radio" id="Мозаика" class="club-cards__input-adress">
+                  <label for="Мозаика" class="label-adress club-cards__label-adress">
+                    <p class="label-adress__description">Лето «Мозаика»<br><span class="label-adress__text"> Россия, Москва, 7-я Кожуховская ул., 9</span></p>
+                  </label>
+                </div>
+                <!-- /.input-group__adress -->
+              </div>
+              <!-- /.club-crads__adress-wrapper -->
+            </div>
+            <!-- /.club-cards__form-wrapper -->
+          </form>
+          <!-- /.form club-cards__form -->
+        </div>
+        <!-- /.club-cards__content -->
+      </div>
+      <!-- /.container -->
+    </section>
+    <!-- /.club-cards -->
   </main>
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
