--- a/src/index.html
+++ b/src/index.html
@@ -455,6 +455,99 @@
     </section>
     <!-- /.club-cards -->
   </main>
+  <footer class="footer">
+    <div class="container">
+      <div class="footer-wrapper">
+        <div class="logo">
+          <a href="#" class="logo-img">
+            <img src="img/logo.png" alt="icon: logo">
+          </a>
+        </div>
+        <div class="footer-menu__summer">
+          <ul class="footer-menu menu-summer">
+            <li class="menu-footer__item">«Лето»</li>
+            <li class="menu-footer__item"><a href="#" class="menu-footer__item-link">Клубы</a>
+            </li>
+            <li class="menu-footer__item"><a href="#" class="menu-footer__item-link">Новости</a>
+            </li>
+            <li class="menu-footer__item"><a href="#" class="menu-footer__item-link">Акции</a>
+            </li>
+            <li class="menu-footer__item"><a href="#" class="menu-footer__item-link">Фотогалерея</a>
+            </li>
+            <li class="menu-footer__item"><a href="#" class="menu-footer__item-link">Наши контакты</a>
+            </li>
+          </ul>
+          <!-- /.menu-footer -->
+        </div>
+        <!-- /.footer-menu__summer -->
+        <div class="footer-menu__clients">
+          <ul class="menu-footer menu-clients">
+            <li class="menu-footer__item">Клиентам</li>
+            <li class="menu-footer__item"><a href="#" class="menu-footer__item-link">Клубные карты</a>
+            </li>
+            <li class="menu-footer__item"><a href="#" class="menu-footer__item-link">Расписание</a>
+            </li>
+            <li class="menu-footer__item"><a href="#" class="menu-footer__item-link">Услуги</a>
+            </li>
+            <li class="menu-footer__item"><a href="#" class="menu-footer__item-link">Тренеры</a>
+            </li>
+          </ul>
+          <!-- /.menu-footer -->
+        </div>
+        <!-- /.footer-menu__summer -->
+        <div class="club-adress-choice footer-club-adress">
+          <p class="club-adress-choice__heading">Выбрать клуб</p>
+          <div class="input-group__adress">
+            <input type="radio" id="Мозаика" name="adress" value="Мозаика" class="club-cards__input-adress">
+            <label for="Мозаика" class="label-adress club-cards__label-adress label-footer-adress">
+              <p class="label-adress__description label-footer-adress__description">Лето «Мозаика»<br><span class="label-adress__text label-footer-adress__text">г. Москва, 7-я Кожуховская ул., 9</span></p>
+            </label>
+          </div>
+          <!-- /.input-group__adress -->
+          <div class="input-group__adress">
+            <input type="radio" id="Щелково" name="adress" value="Щелково" class="club-cards__input-adress">
+            <label for="Щелково" class="label-adress club-cards__label-adress label-footer-adress">
+              <p class="label-adress__description label-footer-adress__description">Лето «Щелково»<br><span class="label-adress__text label-footer-adress__text">г. Щелково, ул. Советская, д. 16</span></p>
+            </label>
+          </div>
+          <!-- /.input-group__adress -->
+        </div>
+        <!-- /.club-adress__choice -->
+      <div class="callback footer-callback">
+        <p class="callback__text">Единый телефон</p>
+        <!-- /.callback__text -->
+        <p class="callback__number">+7 (495) 266 02 78</p>
+        <!-- /.callback__number -->
+        <button class="button button--yellow callback__button">Перезвоните мне</button>
+        <!-- /.button callback__button -->
+      </div>
+      <!-- /.callback footer-callback -->
+      </div>
+      <!-- /.footer-wrapper -->
+      <div class="footer-wrapper-socials">
+        <p class="copyright footer__copyright">© Фитнес-центр «Лето», 2017. Все права защищены.</p>
+        <div class="socials footer__socials">
+          <ul class="socials__list">
+            <li class="socials__item"><a href="#" class="socials__link"><img src="img/footer/VK.png" alt="icon: VK"></a>
+            </li>
+            <li class="socials__item"><a href="#" class="socials__link"><img src="img/footer/Instagram.png" alt="icon: Instagram"></a>
+            </li>
+            <li class="socials__item"><a href="#" class="socials__link"><img src="img/footer/Youtube.png" alt="icon: Youtube"></a>
+            </li>
+            <li class="socials__item"><a href="#" class="socials__link"><img src="img/footer/Facebook.png" alt="icon: Facebook"></a>
+            </li>
+            <li class="socials__item"><a href="#" class="socials__link"><img src="img/footer/Twitter.png" alt="icon: Twitter"></a>
+            </li>
+          </ul>
+          <!-- /.socials__list -->
+        </div>
+        <!-- /.socials footer__socials -->
+      </div>
+      <!-- /.footer-wrapper-socials -->
+    </div>
+    <!-- /.container -->
+  </footer>
+  <!-- /.footer -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
   <script src="js/main.js"></script>
