--- a/src/index.html
+++ b/src/index.html
@@ -239,7 +239,7 @@
       <div class="container">
         <h2 class="header-text visit__text">Записаться на бесплатный визит</h2>
         <!-- /.header-text visit__text -->
-        <form action="send.php" method="POST" class="form visit__form">
+        <form action="#" class="form visit__form">
           <div class="visit__form-wrapper">
             <input type="text" autocomplete="off" name="userName" class="input form__input visit__input" placeholder="Ваше имя...">
             <input type="tel" autocomplete="off" name="userPhone" class="input form__input visit__input" placeholder="Ваш номер телефона...">
@@ -518,7 +518,7 @@
         <!-- /.callback__text -->
         <p class="callback__number">+7 (495) 266 02 78</p>
         <!-- /.callback__number -->
-        <button class="button button--yellow callback__button">Перезвоните мне</button>
+        <button class="button button--yellow callback__button" data-toggle="modal">Перезвоните мне</button>
         <!-- /.button callback__button -->
       </div>
       <!-- /.callback footer-callback -->
@@ -548,6 +548,25 @@
     <!-- /.container -->
   </footer>
   <!-- /.footer -->
+  <div class="modal">
+    <div class="modal__dialog">
+      <button class="modal__close"></button>
+      <!-- /.close-button modal__button -->
+      <h3 class="modal__title">Записаться на визит</h3>
+      <form action="" class="form modal__form">
+        <input type="text" autocomplete="off" name="ModalUserNameVisit" class="input form__input modal__input" placeholder="Ваше имя...">
+        <input type="tel" autocomplete="off" name="ModalUserPhoneVisit" class="input form__input modal__input" placeholder="Ваш номер телефона...">
+        <div class="policy modal__policy">
+          <input type="checkbox" name="ModalPolicyCheckboxVisit" id="modal__policy-checkbox-visit" class="visit__checkbox">
+          <label for="modal__policy-checkbox-visit" class="policy__label modal__label">Я согласен на обработку персональных данных</label>
+        </div>
+        <button class="button modal__button button--yellow" id="ModalVisit">Записаться</button>
+      </form>
+      <!-- /.form modal__form -->
+    </div>
+    <!-- /.modal__dialog -->
+  </div>
+  <!-- /.modal -->
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
   <script src="js/main.js"></script>
